@@ -5,7 +5,7 @@ import version
 if __name__ == '__main__':
 
     # Create a gui object
-    gui = makegui.MakeGui(version.APPNAME + ' ' + version.APPVERSION, None, (400, 300))
+    gui = makegui.MakeGui(version.APPNAME + ' ' + version.APPVERSION, None, (400, 350))
 
     # Parse and run the GUI schema
     gui.parse_and_run(guisetup.schema, guisetup.Events({'gui' : gui}))
